HIPCMS-388 fixing double scrollbar problem

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,10 @@ html {
 
 body {
   background: #C7C9C7;
+  overflow: hidden;
+  max-width: 100%;
+  max-height: 100%;
+  position: relative;
 }
 
 body, input[text], button {
